css/style.css
/* ... */
.tag-yellow, .tag-encoding {
  background-color: var(--yellow);
}

.tag-add {
  cursor: pointer;
  background-color: var(--background);
  color: var(--foreground);
  width: calc(5ch + 1.5rem);
  border: 1px solid var(--gray);
  transition: 0.25s ease;
}
.tag-add:hover {
  background-color: var(--background-light);
}
.tag-add::-webkit-calendar-picker-indicator {
  display: none !important;
}

.tag-delete {
  cursor: pointer;
  font-size: 1rem;
  transform: translate(0.3rem, 0.1rem);
  color: var(--background-light);
  opacity: 60%;
  transition: 0.25s ease;
}
.tag-delete:hover {
  color: black;
}

.col {
  padding-bottom: 30px;
  margin-top: 0;
}

.col-sm-4 {
  max-width: 28%;
}
.col-sm-3 {
  padding: 0;
}
.col-sm-2 {
  padding: 0;
}
.col-sm-9 {
  display: flex;
  flex-direction: column;
}

a.folder {
  position: relative;
  top: 5px;
  text-decoration: none;
  padding: 20px;
  margin-right: 20px;
  font-weight: bold;
  color: white;
  white-space: nowrap;
  line-height: 4;
  border: 2px solid var(--dark-gray);
  border-radius: 5px;
  transition: 0.25s;
}
a.folder:hover {
  top: 0;
  background-color: var(--dark-gray);
}
a.folder i {
  font-size: 1.5rem;
  margin-right: 10px;
  color: var(--main-color);
  transform: translate(0, 15%);
}
a.folder.brighter {
  border-color: var(--gray);
}
a.folder.brighter:hover {
  background-color: var(--gray);
}

i.text-icon {
  margin-right: 10px;
}

.breadcrumb {
  background: none;
  padding-left: 0;
  margin-bottom: 0 !important;
}

.breadcrumb-item {
  align-items: center;
  display: flex;
  font-size: 1.2rem;
}

.breadcrumb-item a {
  color: var(--foreground-light);
  text-decoration: none;
  position: relative;
  bottom: 1px;
  transition: 0.25s;
}

.breadcrumb-item a:hover {
  text-decoration: underline;
  color: white;
}

.breadcrumb-item h1 {
  position: relative;
}

.pagination {
  margin-top: 2rem;
}
.pagination .left {
  flex: 1;
  align-self: center;
  text-align: left;
}
.pagination .center {
  flex: 2;
  text-align: center;
}
.pagination .right {
  flex: 1;
  align-self: center;
  text-align: right;
}
.pagination .center p {
  margin: 0;
}

.page-number {
  display: inline-block;
}
.page-number .nav-link {
  margin: 3px;
  width: 4.5ch;
  height: 4ch;
  padding: 0 !important;
  line-height: 3.5ch;
}
.page-number .nav-link.active:hover {
  background: inherit;
  color: white !important;
}

/* Blog content */
.code-block {
  margin-bottom: 1rem;
  background-color: var(--background);
  border: 2px solid var(--background-light);
  border-radius: 10px;
  overflow: hidden;
}

.code-block p {
  margin: 0.4em 0.8em;
  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  color: var(--foreground);
}

.code-block .copy {
  text-decoration: none;
  float: right;
  color: var(--foreground);
  cursor: pointer;
}
.code-block .copy:hover {
  color: var(--foreground-light);
}

.code-block pre {
  margin: 0;
}

.blog-content code:not(pre code) {
  padding: 2px 4px;
  color: white;
  background-color: var(--background-light);
  border-radius: 3px;
}
blockquote code {
  background-color: var(--background) !important;
}

.blog-content img {
  display: block;
  max-width: calc(min(50ch, 100%));
  cursor: pointer;
  border: 2px solid var(--background-light);
  border-radius: 10px;
}

.blog-content p a:not(.copy), .blog-content p a:not(.copy) * {
  color: var(--main-color-light) !important;
  text-decoration: none;
  transition: 0.2s ease;
}
.blog-content p a:not(.copy):hover, .blog-content p a:not(.copy):hover * {
  color: var(--main-color-light) !important;
  text-decoration: underline;
}

.modal-header {
  padding: 0.5rem 1rem;
}

.modal-body {
  padding: 0;
  border-radius: 0 0 .2rem .2rem;
  overflow: hidden;
}

.table-of-contents {
  float: right;
  width: 350px;
  max-width: 50%;
  background-color: #1e1e1e;
  border: 2px solid var(--background-light);
  border-radius: 10px;
  padding: 0.8em 1.2em 0.4em 1.2em;
  margin: 0 0 1em 1em;
  overflow-y: clip;
}
.table-of-contents a h6 {
  padding: 8px 0;
  margin: 0;
  display: inline-block;
}
.table-of-contents a {
  text-decoration: none;
}
.table-of-contents a:hover * {
  color: var(--main-color);
  text-decoration: underline;
}

/* Forms */
.form-control {
  background-color: var(--background) !important;
  border: 1px solid #404040;
  color: var(--foreground-light) !important;
}

.form-check-input[type=checkbox]:not(:checked) {
  background-color: var(--background);
  border-color: var(--dark-gray);
}

label {
  margin-right: 10px;
}

.btn-primary {
  background-color: var(--main-color-dark);
  border-color: var(--main-color-dark);
  transition: 0.25s ease;
}
.btn-primary:hover {
  background-color: var(--main-color);
  border-color: var(--main-color);
}

.btn-secondary {
  background-color: var(--background);
  border: 1px solid var(--dark-gray);
  color: var(--foreground-light);
  transition: 0.25s ease;
}
.btn-secondary:hover {
  background-color: var(--background-light);
}

.boxed {
  border: 1px solid rgb(255 255 255 / 10%);
  border-radius: 5px;
  display: inline-block;
  padding: 20px 50px;
  transition: border-color 0.25s ease;
}
.boxed input[type=password], .boxed input[type=text] {
  max-width: 300px;
  text-align: center;
}

/* Specific classes */
.center-page {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  text-align: -webkit-center;
}

#particles-js {
  z-index: -1000;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--background);
}

.grecaptcha-badge {
  z-index: 10000;
}

@media (max-width: 100ch) {
  .desktop-only {
    display: none;
  }
}

.big-icon {
  font-size: 100px;
  color: var(--main-color);
}

.boxed-img {
  max-width: 80%;
  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
  border-radius: 25px;
  padding: 35px;
  width: 35ch;
}

span.highlight {
  background-color: rgb(255 255 255 / 15%);
}
/* ... */

